wled00/data/index.css
/* ... */
/* add more icons */
@font-face {
	font-family: "LIcons";
	src: url('./icons-ui/fonts/icomoon_lightfall.woff') format('woff');
}

:root {
	--c-1: #111;
	--c-f: #fff;
	--c-2: #222;
	--c-3: #333;
	--c-4: #444;
	--c-5: #555;
	--c-6: #666;
	--c-8: #888;
	--c-b: #bbb;
	--c-c: #ccc;
	--c-e: #eee;
	--c-d: #ddd;
	--c-r: #c32;
	--c-g: #2c1;
	--c-l: #48a;
	--c-y: #a90;
	--t-b: .5;
	--c-o: rgba(34, 34, 34, .9);
	--c-tb : rgba(34, 34, 34, var(--t-b));
	--c-tba: rgba(102, 102, 102, var(--t-b));
	--c-tbh: rgba(51, 51, 51, var(--t-b));
	/*following are internal*/
	--th: 70px;
	--tp: 70px;
	--bh: 63px;
	--tbp: 14px 14px 10px 14px;
	--bbp: 9px 0 7px 0;
	--bhd: none;
	--sgp: "block";
	--bmt: 0;
	--sti: 10px; /*reduced from 42px*/
	--stp: 10px; /*reduced from 42px*/
}

html {
	touch-action: manipulation;
}

body {
	margin: 0;
	background-color: var(--c-1);
	/*mgibson: experimental*/
	/*background: linear-gradient(0deg, #222 10%, #111 15%, #111 75%, #222 80%);*/
	/*font-family: Helvetica, Verdana, sans-serif;*/
	font-family: Montserrat, sans-serif;
	font-size: 17px;
	color: var(--c-f);
	text-align: center;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	-webkit-tap-highlight-color: transparent;
	scrollbar-width: 6px;
	scrollbar-color: var(--c-sb) transparent;
}

.wordmark {
    font-size: 26px;
	font-weight: 400;
	letter-spacing:12px;
	/*background: linear-gradient(0deg, #111 4%, #ddd 50%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;*/
	/*text-shadow: 0 0 10px rgba(255, 255, 255, 0.75);*/
}

.glowing {
    filter: drop-shadow(0 0 1px black) /*give the element a fine sharp edge */
			drop-shadow(0 0 25px rgba(120, 120, 120, 0.5));
}

html,
body {
	height: 100%;
	width: 100%;
	position: fixed;
	overscroll-behavior: none;
}

#bg {
	height: 100vh;
	width: 100vw;
	position: fixed;
	z-index: -10;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	opacity: 0;
	transition: opacity 2s;
}

p {
	margin: 10px 0 2px 0;
}
a, p, a:visited {
	color: var(--c-d);
}
a, a:visited {
	text-decoration: none;
}

button {
	outline: 0;
	cursor: pointer;
}

.labels {
	margin: 0;
	padding: 8px 0 2px 0;
	font-size: 19px;
}

#namelabel {
	position: fixed;
	bottom: calc(var(--bh) + 6px);
	right: 6px;
	color: var(--c-8); /* set bright (--c-d) with dark text shadow (see below) to be legible on gray background (in image) */
	cursor: pointer;
	writing-mode: vertical-rl;
	/* transform: rotate(180deg); */
}

.bri {
	padding: 4px;
}

.wrapper {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	background: var(--c-tb);
	z-index: 1;
}

.icons {
	font-family: 'WIcons';
	font-style: normal;
	font-size: 24px !important;
	line-height: 1 !important;
	display: inline-block;
}

.icons_s {
	font-family: 'WIcons';
	font-style: normal;
	font-size: 20px !important;
	line-height: 1 !important;
	display: inline-block;
}

.icons2 {
	font-family: 'LIcons';
	font-style: normal;
	font-size: 24px !important;
	line-height: 1 !important;
	display: inline-block;
}

.icons_sm {
	font-family: 'LIcons';
	font-style: normal;
	font-size: 18px !important;
	line-height: 1 !important;
	display: inline-block;
}

.on {
	color: var(--c-g) !important;
}

.off {
	color: var(--c-6) !important;
	/* cursor: default !important; */
}

.top .icons, .bot .icons {
	margin: -2px 0 4px 0;
}

.huge {
	font-size: 60px !important;
}

.segt, .plentry TABLE {
	table-layout: fixed;
	width: 100%;
}

.segt TD {
	padding: 2px 0 !important;
	text-align: center;
	/*text-transform: uppercase;*/
}
.segt TD, .plentry TD {
	font-size: 13px;
	padding: 0;
	vertical-align: middle;
}

.keytd {
	text-align: left;
}

.valtd {
	text-align: right;
}

.valtd i {
	font-size: small;
}

.slider-icon {
	position: absolute;
	top: 8px; /* mgibson added to vertically center in element */
	left: 8px;
	bottom: 5px;
}

.sel-icon {
	transform: translateX(3px);
}

.e-icon, .g-icon, .sel-icon, .slider-icon {
	cursor: pointer;
	color: var(--c-d);
}

.g-icon {
	font-style: normal;
	position: absolute;
	top: 8px;
	right: 8px;
}

/* pop-up container */
.pop {
	position: absolute;
	display: inline-block;
	top: 0;
	right: 0;
}

/* pop-up content (segment sets) */
.pop-c {
	position: absolute;
	background-color: var(--c-2);
	border: 1px solid var(--c-8);
	border-radius: 20px;
	z-index: 1;
	top: 3px;
	right: 35px;
	padding: 3px 8px 1px;
	font-size: 24px;
	line-height: 24px;
}
.pop-c span {
	padding: 2px 6px;
}

.search-icon {
	position: absolute;
	top: 10px;
	left: 12px;
	width: 24px;
	height: 24px;
}

.clear-icon {
	position: absolute;
	top: 8px;
	right: 9px;
	cursor: pointer;
}

.flr {
	color: var(--c-f);
	transform: rotate(0deg);
	transition: transform .3s;
	position: absolute;
	top: 0;
	right: 0;
	padding: 8px;
}

.expanded .flr,
.exp {
	transform: rotate(180deg);
}

.il {
	display: inline-block;
	width:100%; /* force width to 100% since search bubble removed */
	vertical-align: middle;
}

#liveview {
	height: 4px;
	width: 100%;
	border: 0;
}

#liveview2D {
	height: 90%;
	width: 90%;
	border: 0;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
}

.tab {
	background-color: transparent;
	color: var(--c-d);
}

.bot {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	background-color: var(--c-tb);
}

.tab button {
	background-color: transparent;
	float: left;
	border: 0;
	transition: color .3s, background-color .3s;
	font-size: 17px;
	color: var(--c-c);
	min-width: 44px;
}

.top button {
	padding: var(--tbp);
	margin: 0;
}

.bot button {
	padding: var(--bbp);
	width: 25%;
	margin: 0;
}

.tab button:hover {
	background-color: var(--c-tbh);
	color: var(--c-e);
}

.tab button.active {
	background-color: var(--c-tba) !important;
	color: var(--c-f);
}

.active {
	background-color: var(--c-6) !important;
	color: var(--c-f);
}
/* ... */

